<?xml version="1.0"?>
<package format="2">
  <name>prioritized_qp_proxsuite</name>
  <version>0.0.0</version>
  <description>The prioritized_qp_proxsuite package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>prioritized_qp_base</depend>
  <depend>proxsuite</depend>

</package>
